Fix some spacing

--- a/frontend/src/scenes/ingestion/v2/panels/Panels.scss
+++ b/frontend/src/scenes/ingestion/v2/panels/Panels.scss
@@ -38,6 +38,16 @@
     margin: 0;
 }
 
+.IngestionSubtitle {
+    font-size: 20px;
+    font-weight: 800;
+    margin: 1rem 0;
+}
+
+.prompt-text {
+    margin-top: 1rem;
+}
+
 .ingestion-listening-for-events {
     display: flex;
     flex-direction: column;
